test/e2e/features/trafficpolicystatus/testdata/policy-with-missing-gw.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: example-policy
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: missing-gw
  cors:
    allowOrigins:
      - "https://ignored.com"
